crates/ruff_python_parser/tests/snapshots/invalid_syntax@expressions__named__invalid_target.py.snap
---
source: crates/ruff_python_parser/tests/fixtures.rs
input_file: crates/ruff_python_parser/resources/invalid/expressions/named/invalid_target.py
snapshot_kind: text
---
## AST

```
Module(
    ModModule {
        node_index: NodeIndex(None),
        range: 0..109,
        body: [
            Expr(
                StmtExpr {
                    node_index: NodeIndex(None),
                    range: 58..68,
                    value: Named(
                        ExprNamed {
                            node_index: NodeIndex(None),
                            range: 59..67,
                            target: Attribute(
                                ExprAttribute {
                                    node_index: NodeIndex(None),
                                    range: 59..62,
                                    value: Name(
                                        ExprName {
                                            node_index: NodeIndex(None),
                                            range: 59..60,
                                            id: Name("x"),
                                            ctx: Load,
                                        },
                                    ),
                                    attr: Identifier {
                                        id: Name("y"),
                                        range: 61..62,
                                        node_index: NodeIndex(None),
                                    },
                                    ctx: Store,
                                },
                            ),
                            value: NumberLiteral(
                                ExprNumberLiteral {
                                    node_index: NodeIndex(None),
                                    range: 66..67,
                                    value: Int(
                                        1,
                                    ),
                                },
                            ),
                        },
                    ),
                },
            ),
            Expr(
                StmtExpr {
                    node_index: NodeIndex(None),
                    range: 69..80,
                    value: Named(
                        ExprNamed {
                            node_index: NodeIndex(None),
                            range: 70..79,
                            target: Subscript(
                                ExprSubscript {
                                    node_index: NodeIndex(None),
                                    range: 70..74,
                                    value: Name(
                                        ExprName {
                                            node_index: NodeIndex(None),
                                            range: 70..71,
                                            id: Name("x"),
                                            ctx: Load,
                                        },
                                    ),
                                    slice: Name(
                                        ExprName {
                                            node_index: NodeIndex(None),
                                            range: 72..73,
                                            id: Name("y"),
                                            ctx: Load,
                                        },
                                    ),
                                    ctx: Store,
                                },
                            ),
                            value: NumberLiteral(
                                ExprNumberLiteral {
                                    node_index: NodeIndex(None),
                                    range: 78..79,
                                    value: Int(
                                        1,
                                    ),
                                },
                            ),
                        },
                    ),
                },
            ),
            Expr(
                StmtExpr {
                    node_index: NodeIndex(None),
                    range: 81..90,
                    value: Named(
                        ExprNamed {
                            node_index: NodeIndex(None),
                            range: 82..89,
                            target: Starred(
                                ExprStarred {
                                    node_index: NodeIndex(None),
                                    range: 82..84,
                                    value: Name(
                                        ExprName {
                                            node_index: NodeIndex(None),
                                            range: 83..84,
                                            id: Name("x"),
                                            ctx: Store,
                                        },
                                    ),
                                    ctx: Store,
                                },
                            ),
                            value: NumberLiteral(
                                ExprNumberLiteral {
                                    node_index: NodeIndex(None),
                                    range: 88..89,
                                    value: Int(
                                        1,
                                    ),
                                },
                            ),
                        },
                    ),
                },
            ),
            Expr(
                StmtExpr {
                    node_index: NodeIndex(None),
                    range: 91..109,
                    value: Named(
                        ExprNamed {
                            node_index: NodeIndex(None),
                            range: 92..108,
                            target: List(
                                ExprList {
                                    node_index: NodeIndex(None),
                                    range: 92..98,
                                    elts: [
                                        Name(
                                            ExprName {
                                                node_index: NodeIndex(None),
                                                range: 93..94,
                                                id: Name("x"),
                                                ctx: Store,
                                            },
                                        ),
                                        Name(
                                            ExprName {
                                                node_index: NodeIndex(None),
                                                range: 96..97,
                                                id: Name("y"),
                                                ctx: Store,
                                            },
                                        ),
                                    ],
                                    ctx: Store,
                                },
                            ),
                            value: List(
                                ExprList {
                                    node_index: NodeIndex(None),
                                    range: 102..108,
                                    elts: [
                                        NumberLiteral(
                                            ExprNumberLiteral {
                                                node_index: NodeIndex(None),
                                                range: 103..104,
                                                value: Int(
                                                    1,
                                                ),
                                            },
                                        ),
                                        NumberLiteral(
                                            ExprNumberLiteral {
                                                node_index: NodeIndex(None),
                                                range: 106..107,
                                                value: Int(
                                                    2,
                                                ),
                                            },
                                        ),
                                    ],
                                    ctx: Load,
                                },
                            ),
                        },
                    ),
                },
            ),
        ],
    },
)
```
## Errors

  |
1 | # Assignment expression target can only be an identifier
2 | 
3 | (x.y := 1)
  |  ^^^ Syntax Error: Assignment expression target must be an identifier
4 | (x[y] := 1)
5 | (*x := 1)
  |


  |
3 | (x.y := 1)
4 | (x[y] := 1)
  |  ^^^^ Syntax Error: Assignment expression target must be an identifier
5 | (*x := 1)
6 | ([x, y] := [1, 2])
  |


  |
3 | (x.y := 1)
4 | (x[y] := 1)
5 | (*x := 1)
  |  ^^ Syntax Error: Assignment expression target must be an identifier
6 | ([x, y] := [1, 2])
  |


  |
4 | (x[y] := 1)
5 | (*x := 1)
6 | ([x, y] := [1, 2])
  |  ^^^^^^ Syntax Error: Assignment expression target must be an identifier
  |
