crates/ruff_python_parser/tests/snapshots/invalid_syntax@expressions__named__missing_expression_2.py.snap
---
source: crates/ruff_python_parser/tests/fixtures.rs
input_file: crates/ruff_python_parser/resources/invalid/expressions/named/missing_expression_2.py
snapshot_kind: text
---
## AST

```
Module(
    ModModule {
        node_index: NodeIndex(None),
        range: 0..87,
        body: [
            Expr(
                StmtExpr {
                    node_index: NodeIndex(None),
                    range: 61..71,
                    value: Named(
                        ExprNamed {
                            node_index: NodeIndex(None),
                            range: 62..71,
                            target: Name(
                                ExprName {
                                    node_index: NodeIndex(None),
                                    range: 62..63,
                                    id: Name("x"),
                                    ctx: Store,
                                },
                            ),
                            value: Name(
                                ExprName {
                                    node_index: NodeIndex(None),
                                    range: 68..71,
                                    id: Name("def"),
                                    ctx: Load,
                                },
                            ),
                        },
                    ),
                },
            ),
            AnnAssign(
                StmtAnnAssign {
                    node_index: NodeIndex(None),
                    range: 72..87,
                    target: Call(
                        ExprCall {
                            node_index: NodeIndex(None),
                            range: 72..77,
                            func: Name(
                                ExprName {
                                    node_index: NodeIndex(None),
                                    range: 72..75,
                                    id: Name("foo"),
                                    ctx: Load,
                                },
                            ),
                            arguments: Arguments {
                                range: 75..77,
                                node_index: NodeIndex(None),
                                args: [],
                                keywords: [],
                            },
                        },
                    ),
                    annotation: Name(
                        ExprName {
                            node_index: NodeIndex(None),
                            range: 83..87,
                            id: Name("pass"),
                            ctx: Load,
                        },
                    ),
                    value: None,
                    simple: false,
                },
            ),
        ],
    },
)
```
## Errors

  |
3 | (x :=
4 | 
5 | def foo():
  | ^^^ Syntax Error: Expected an identifier, but found a keyword `def` that cannot be used here
6 |     pass
  |


  |
3 | (x :=
4 | 
5 | def foo():
  |     ^^^ Syntax Error: Expected `)`, found name
6 |     pass
  |


  |
5 | def foo():
6 |     pass
  |     ^^^^ Syntax Error: Expected an identifier, but found a keyword `pass` that cannot be used here
  |


  |
5 | def foo():
6 |     pass
  |          Syntax Error: unexpected EOF while parsing
  |
